# ai-genai-context-manager

./: .gitignore  README.md  pyproject.toml  ruff.toml
config/: config.dev.yaml  config.prod.yaml  config.staging.yaml
docs/: usage.md
src/context_manager/: __init__.py  _version.py  config.py  exceptions.py  factory.py  logging_setup.py  manager.py  models.py  protocols.py
src/context_manager/providers/: __init__.py  anthropic_provider.py  openai_provider.py
src/context_manager/summarization/: __init__.py  anthropic_summarizer.py  openai_summarizer.py
src/context_manager/token_counting/: __init__.py  anthropic_counter.py  estimator.py  openai_counter.py
src/context_manager/trimming/: __init__.py  fifo.py  priority.py  sliding_window.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_config_environments.py  test_full_pipeline.py
tests/unit/: __init__.py  test_config.py  test_exceptions.py  test_manager.py  test_models.py
tests/unit/test_summarization/: __init__.py  test_anthropic_summarizer.py  test_openai_summarizer.py
tests/unit/test_token_counting/: __init__.py  test_anthropic_counter.py  test_estimator.py  test_openai_counter.py
tests/unit/test_trimming/: __init__.py  test_fifo.py  test_priority.py  test_sliding_window.py
